--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
   <link
     rel="icon"
     type="image/x-icon"
-    href="/public/images/favicon.ico"/>
+    href="/public/images/favicon_light.ico"/>
+  <link
+    rel="icon"
+    type="image/x-icon"
+    href="/public/images/favicon_light.ico"
+    media="(prefers-color-scheme: light)"/>
+  <link
+    rel="icon"
+    type="image/x-icon"
+    href="/public/images/favicon_dark.ico"
+    media="(prefers-color-scheme: dark)"/>
   <title>PSU Tier List</title>
 </head>
 <body>
